--- a/Project_Backend/src/main/resources/application.properties
+++ b/Project_Backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/clothing_store_db
-spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.url = 
+spring.datasource.username = 
+spring.datasource.password = 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=oanasabau1@gmail.com
-spring.mail.password=nscd yabt ltuq akzy
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
